Update league tag to Affliction

--- a/SquashingBeetles.html
+++ b/SquashingBeetles.html
@@ -9,7 +9,7 @@
     };   
 
     function FetchScarabInfo() {
-        fetch("https://corsproxy.io/?https://poe.ninja/api/data/itemoverview?league=Ancestor&type=Scarab",
+        fetch("https://corsproxy.io/?https://poe.ninja/api/data/itemoverview?league=Affliction&type=Scarab",
         {
             headers: { 'Content-Type': 'application/json', 'Accept': 'application/json' },
             method: "GET",
